src/bones/lang/_type_lang/TypeLangParser.py
# Generated from TypeLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TypeLangParser ( Parser ):

    grammarFileName = "TypeLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'atom'", "'explicit'", "'in'", 
                     "'implicitly'", "'('", "')'", "'tbc'", "'&&'", "'&'", 
                     "'+'", "'*'", "'{'", "'}'", "'{{'", "'}}'", "'**'", 
                     "'^'", "'['", "']'", "'*('", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SCHEMA_VAR", 
                      "SEQ_VAR", "NAME", "ALPHA", "DIGIT", "WHITESPACE", 
                      "NEWLINE", "LINE_COMMENT" ]

    RULE_tl_body = 0
    RULE_assignments = 1
    RULE_ret_expr = 2
    RULE_err_if_toks = 3
    RULE_assign = 4
    RULE_assign_atom = 5
    RULE_get = 6
    RULE_assign_expr = 7
    RULE_expr = 8
    RULE_comment = 9
    RULE_fields = 10

    ruleNames =  [ "tl_body", "assignments", "ret_expr", "err_if_toks", 
                   "assign", "assign_atom", "get", "assign_expr", "expr", 
                   "comment", "fields" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    SCHEMA_VAR=23
    SEQ_VAR=24
    NAME=25
    ALPHA=26
    DIGIT=27
    WHITESPACE=28
    NEWLINE=29
    LINE_COMMENT=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Tl_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeLangParser.RULE_tl_body

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Ignored_1dContext(Tl_bodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Tl_bodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ret_expr(self):
            return self.getTypedRuleContext(TypeLangParser.Ret_exprContext,0)

        def err_if_toks(self):
            return self.getTypedRuleContext(TypeLangParser.Err_if_toksContext,0)

        def EOF(self):
            return self.getToken(TypeLangParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_1d" ):
                listener.enterIgnored_1d(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_1d" ):
                listener.exitIgnored_1d(self)


    class Ignored_1cContext(Tl_bodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Tl_bodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignments(self):
            return self.getTypedRuleContext(TypeLangParser.AssignmentsContext,0)

        def ret_expr(self):
            return self.getTypedRuleContext(TypeLangParser.Ret_exprContext,0)

        def err_if_toks(self):
            return self.getTypedRuleContext(TypeLangParser.Err_if_toksContext,0)

        def EOF(self):
            return self.getToken(TypeLangParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_1c" ):
                listener.enterIgnored_1c(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_1c" ):
                listener.exitIgnored_1c(self)


    class DoneContext(Tl_bodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Tl_bodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignments(self):
            return self.getTypedRuleContext(TypeLangParser.AssignmentsContext,0)

        def EOF(self):
            return self.getToken(TypeLangParser.EOF, 0)
        def err_if_toks(self):
            return self.getTypedRuleContext(TypeLangParser.Err_if_toksContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDone" ):
                listener.enterDone(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDone" ):
                listener.exitDone(self)


    class Ignored_1bContext(Tl_bodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Tl_bodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ret_expr(self):
            return self.getTypedRuleContext(TypeLangParser.Ret_exprContext,0)

        def EOF(self):
            return self.getToken(TypeLangParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_1b" ):
                listener.enterIgnored_1b(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_1b" ):
                listener.exitIgnored_1b(self)


    class Ignored_1aContext(Tl_bodyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Tl_bodyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignments(self):
            return self.getTypedRuleContext(TypeLangParser.AssignmentsContext,0)

        def ret_expr(self):
            return self.getTypedRuleContext(TypeLangParser.Ret_exprContext,0)

        def EOF(self):
            return self.getToken(TypeLangParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_1a" ):
                listener.enterIgnored_1a(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_1a" ):
                listener.exitIgnored_1a(self)



    def tl_body(self):

        localctx = TypeLangParser.Tl_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tl_body)
        try:
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = TypeLangParser.DoneContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.assignments(0)
                self.state = 23
                self.match(TypeLangParser.EOF)
                pass

            elif la_ == 2:
                localctx = TypeLangParser.Ignored_1aContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.assignments(0)
                self.state = 26
                self.ret_expr()
                self.state = 27
                self.match(TypeLangParser.EOF)
                pass

            elif la_ == 3:
                localctx = TypeLangParser.Ignored_1bContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 29
                self.ret_expr()
                self.state = 30
                self.match(TypeLangParser.EOF)
                pass

            elif la_ == 4:
                localctx = TypeLangParser.DoneContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 32
                self.assignments(0)
                self.state = 33
                self.err_if_toks()
                self.state = 34
                self.match(TypeLangParser.EOF)
                pass

            elif la_ == 5:
                localctx = TypeLangParser.Ignored_1cContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 36
                self.assignments(0)
                self.state = 37
                self.ret_expr()
                self.state = 38
                self.err_if_toks()
                self.state = 39
                self.match(TypeLangParser.EOF)
                pass

            elif la_ == 6:
                localctx = TypeLangParser.Ignored_1dContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 41
                self.ret_expr()
                self.state = 42
                self.err_if_toks()
                self.state = 43
                self.match(TypeLangParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeLangParser.RULE_assignments

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Ignored_2bContext(AssignmentsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.AssignmentsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assign(self):
            return self.getTypedRuleContext(TypeLangParser.AssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_2b" ):
                listener.enterIgnored_2b(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_2b" ):
                listener.exitIgnored_2b(self)


    class Ignored_2aContext(AssignmentsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.AssignmentsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignments(self):
            return self.getTypedRuleContext(TypeLangParser.AssignmentsContext,0)

        def assign(self):
            return self.getTypedRuleContext(TypeLangParser.AssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_2a" ):
                listener.enterIgnored_2a(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_2a" ):
                listener.exitIgnored_2a(self)



    def assignments(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TypeLangParser.AssignmentsContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_assignments, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = TypeLangParser.Ignored_2bContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 48
            self.assign()
            self._ctx.stop = self._input.LT(-1)
            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TypeLangParser.Ignored_2aContext(self, TypeLangParser.AssignmentsContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_assignments)
                    self.state = 50
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 51
                    self.assign() 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Ret_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeLangParser.RULE_ret_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Return_namedContext(Ret_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Ret_exprContext
            super().__init__(parser)
            self.name_or_atom_ = None # GetContext
            self.copyFrom(ctx)

        def get(self):
            return self.getTypedRuleContext(TypeLangParser.GetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_named" ):
                listener.enterReturn_named(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_named" ):
                listener.exitReturn_named(self)


    class Return_exprContext(Ret_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Ret_exprContext
            super().__init__(parser)
            self.expr_ = None # ExprContext
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(TypeLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_expr" ):
                listener.enterReturn_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_expr" ):
                listener.exitReturn_expr(self)



    def ret_expr(self):

        localctx = TypeLangParser.Ret_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ret_expr)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = TypeLangParser.Return_exprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                localctx.expr_ = self.expr(0)
                pass

            elif la_ == 2:
                localctx = TypeLangParser.Return_namedContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                localctx.name_or_atom_ = self.get()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Err_if_toksContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self, i:int=None):
            if i is None:
                return self.getTokens(TypeLangParser.EOF)
            else:
                return self.getToken(TypeLangParser.EOF, i)

        def getRuleIndex(self):
            return TypeLangParser.RULE_err_if_toks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterErr_if_toks" ):
                listener.enterErr_if_toks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitErr_if_toks" ):
                listener.exitErr_if_toks(self)




    def err_if_toks(self):

        localctx = TypeLangParser.Err_if_toksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_err_if_toks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2147483646) != 0):
                self.state = 61
                _la = self._input.LA(1)
                if _la <= 0 or _la==-1:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeLangParser.RULE_assign

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Ignored_3aContext(AssignContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.AssignContext
            super().__init__(parser)
            self.atom_ = None # Assign_atomContext
            self.copyFrom(ctx)

        def assign_atom(self):
            return self.getTypedRuleContext(TypeLangParser.Assign_atomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_3a" ):
                listener.enterIgnored_3a(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_3a" ):
                listener.exitIgnored_3a(self)


    class Ignored_3bContext(AssignContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.AssignContext
            super().__init__(parser)
            self.expr_ = None # Assign_exprContext
            self.copyFrom(ctx)

        def assign_expr(self):
            return self.getTypedRuleContext(TypeLangParser.Assign_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIgnored_3b" ):
                listener.enterIgnored_3b(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIgnored_3b" ):
                listener.exitIgnored_3b(self)



    def assign(self):

        localctx = TypeLangParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = TypeLangParser.Ignored_3aContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                localctx.atom_ = self.assign_atom()
                pass

            elif la_ == 2:
                localctx = TypeLangParser.Ignored_3bContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                localctx.expr_ = self.assign_expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_atomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeLangParser.RULE_assign_atom

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Atom_explicit_inContext(Assign_atomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Assign_atomContext
            super().__init__(parser)
            self.name_ = None # Token
            self.atom_ = None # GetContext
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)
        def get(self):
            return self.getTypedRuleContext(TypeLangParser.GetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_explicit_in" ):
                listener.enterAtom_explicit_in(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_explicit_in" ):
                listener.exitAtom_explicit_in(self)


    class Atom_multiContext(Assign_atomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Assign_atomContext
            super().__init__(parser)
            self.name_ = None # Token
            self.rhs_ = None # Assign_atomContext
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)
        def assign_atom(self):
            return self.getTypedRuleContext(TypeLangParser.Assign_atomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_multi" ):
                listener.enterAtom_multi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_multi" ):
                listener.exitAtom_multi(self)


    class Atom_implicitlyContext(Assign_atomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Assign_atomContext
            super().__init__(parser)
            self.name_ = None # Token
            self.atom_ = None # GetContext
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)
        def get(self):
            return self.getTypedRuleContext(TypeLangParser.GetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_implicitly" ):
                listener.enterAtom_implicitly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_implicitly" ):
                listener.exitAtom_implicitly(self)


    class AtomContext(Assign_atomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Assign_atomContext
            super().__init__(parser)
            self.name_ = None # Token
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)


    class Atom_explicitContext(Assign_atomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Assign_atomContext
            super().__init__(parser)
            self.name_ = None # Token
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_explicit" ):
                listener.enterAtom_explicit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_explicit" ):
                listener.exitAtom_explicit(self)


    class Atom_inContext(Assign_atomContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Assign_atomContext
            super().__init__(parser)
            self.name_ = None # Token
            self.atom_ = None # GetContext
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)
        def get(self):
            return self.getTypedRuleContext(TypeLangParser.GetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_in" ):
                listener.enterAtom_in(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_in" ):
                listener.exitAtom_in(self)



    def assign_atom(self):

        localctx = TypeLangParser.Assign_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_atom)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = TypeLangParser.Atom_multiContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                localctx.name_ = self.match(TypeLangParser.NAME)
                self.state = 72
                self.match(TypeLangParser.T__0)
                self.state = 73
                localctx.rhs_ = self.assign_atom()
                pass

            elif la_ == 2:
                localctx = TypeLangParser.Atom_explicit_inContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                localctx.name_ = self.match(TypeLangParser.NAME)
                self.state = 75
                self.match(TypeLangParser.T__0)
                self.state = 76
                self.match(TypeLangParser.T__1)
                self.state = 77
                self.match(TypeLangParser.T__2)
                self.state = 78
                self.match(TypeLangParser.T__3)
                self.state = 79
                localctx.atom_ = self.get()
                pass

            elif la_ == 3:
                localctx = TypeLangParser.Atom_explicitContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                localctx.name_ = self.match(TypeLangParser.NAME)
                self.state = 81
                self.match(TypeLangParser.T__0)
                self.state = 82
                self.match(TypeLangParser.T__1)
                self.state = 83
                self.match(TypeLangParser.T__2)
                pass

            elif la_ == 4:
                localctx = TypeLangParser.Atom_inContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                localctx.name_ = self.match(TypeLangParser.NAME)
                self.state = 85
                self.match(TypeLangParser.T__0)
                self.state = 86
                self.match(TypeLangParser.T__1)
                self.state = 87
                self.match(TypeLangParser.T__3)
                self.state = 88
                localctx.atom_ = self.get()
                pass

            elif la_ == 5:
                localctx = TypeLangParser.Atom_implicitlyContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                localctx.name_ = self.match(TypeLangParser.NAME)
                self.state = 90
                self.match(TypeLangParser.T__0)
                self.state = 91
                self.match(TypeLangParser.T__1)
                self.state = 92
                self.match(TypeLangParser.T__4)
                self.state = 93
                localctx.atom_ = self.get()
                pass

            elif la_ == 6:
                localctx = TypeLangParser.AtomContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                localctx.name_ = self.match(TypeLangParser.NAME)
                self.state = 95
                self.match(TypeLangParser.T__0)
                self.state = 96
                self.match(TypeLangParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeLangParser.RULE_get

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NameContext(GetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.GetContext
            super().__init__(parser)
            self.name_ = None # Token
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)


    class Atom_in_parensContext(GetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.GetContext
            super().__init__(parser)
            self.atom_ = None # Assign_atomContext
            self.copyFrom(ctx)

        def assign_atom(self):
            return self.getTypedRuleContext(TypeLangParser.Assign_atomContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_in_parens" ):
                listener.enterAtom_in_parens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_in_parens" ):
                listener.exitAtom_in_parens(self)



    def get(self):

        localctx = TypeLangParser.GetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_get)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                localctx = TypeLangParser.NameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                localctx.name_ = self.match(TypeLangParser.NAME)
                pass
            elif token in [6]:
                localctx = TypeLangParser.Atom_in_parensContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(TypeLangParser.T__5)
                self.state = 101
                localctx.atom_ = self.assign_atom()
                self.state = 102
                self.match(TypeLangParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TypeLangParser.RULE_assign_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Prealloc_inContext(Assign_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TypeLangParser.Assign_exprContext
            super().__init__(parser)
            self.name_ = None # Token
            self.atom_ = None # GetContext
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(TypeLangParser.NAME, 0)
        def get(self):
            return self.getTypedRuleContext(TypeLangParser.GetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrealloc_in" ):
                listener.enterPrealloc_in(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrealloc_in" ):
                listener.exitPrealloc_in(self)


    class Assign_expr_toContext(Assign_exprContext):
